--- a/README
+++ b/README
@@ -3,4 +3,4 @@ I really hate when Stefan(skanev) calls me less than hour before a lecture with 
 
 So I decided to write some simple python script. If I wrote something usable(it's almost 03:00 out here and I'm basically...well...out of order) will copy it to the pyfmi repo.
 
-TODO: Find some good way to access current vouchers. For now, I'm going to keep them in a list(just while developing this)
+TODO: Make more descriptive output for main.py file and all this needs refactoring
