--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Just a simple voucher generator for the pyfmi course.
-I really hate when Stefan(skanev) calls me less than hour before a lecture with "Make me some vouchers and don't be late!".
+Generates 100 codes by default. No validity is printed on them.
+Open the resuting HTML file in Firefox!
 
-So I decided to write some simple python script. If I wrote something usable(it's almost 03:00 out here and I'm basically...well...out of order) will copy it to the pyfmi repo.
+Run it with Python >= 3:
 
-TODO: Make more descriptive output for main.py file and all this needs refactoring
+python3.0 main.py
